# Lightweaver

./: .clang-format  Atmosphere.cpp  Atmosphere.hpp  Atmosphere.py  AtomicModel.py  AtomicSet.py  AtomicTable.py  Background.cpp  Background.hpp  Barklem.py  CAtmosphere.cpp  CAtmosphere.pyx  CAtomicTable.pyx  CaII_atom.py  CmoArray.hpp  CmoArray.pxd  CmoArrayHelper.cpp  CmoArrayHelper.pxd  CmoArrayHelper.pyx  ComputationalStructures.pyx  Constants.hpp  Constants.py  ConvertAtom.py  Elements.pyx  Falc80.py  Formal.cpp  Formal.hpp  FormalScalar.cpp  FormalStokes.cpp  InterfaceSketch.py  JasPP.hpp  JudgeDynamicValidation.py  JudgeRf.py  LICENSE  Lightweaver.hpp  LightweaverAmalgamated.cpp  M1Notes.md  MANIFEST.in  MakeElements.py  Molecule.py  (+23 more)
Data/: AbundancesAsplund09.pickle
Docs/: conf.py  index.rst
Molecules/: CO.molecule
Samples/: Test10.py  Test12.py  Test13.py  Test2.py  Test3.py  Test5.py  Test7.py
Source/: Atmosphere.cpp  Background.cpp  Background.hpp  BasicLwDriver.cpp  Bezier.hpp  CAtmosphere.pyx  CmoArray.hpp  CmoArray.pxd  CmoArrayHelper.pyx  Constants.hpp  Dispatch_chi_eta_aux_accum.ipp  Dispatch_compute_full_operator_rates.ipp  Dispatch_intensity_core_opt.ipp  EscapeProbability.cpp  FastBackground.cpp  FastBackground.hpp  FormalInterface.cpp  FormalScalar.cpp  FormalScalar2d.cpp  FormalStokes.cpp  JasPP.hpp  Lightweaver.hpp  LightweaverAmalgamated.cpp  LuSolve.cpp  LuSolve.hpp  LwAtmosphere.hpp  LwAtom.hpp  LwContext.hpp  LwExtraParams.hpp  LwFormalInterface.hpp  LwFormalInterfacePosix.hpp  LwFormalInterfaceWin.hpp  LwInternal.hpp  LwIterationResult.hpp  (+24 more)
(+87 files in other folders)
